💄 fixed overflow on music titles

--- a/styles/music.module.css
+++ b/styles/music.module.css
@@ -7,8 +7,9 @@
 .track_container {
   position: relative;
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 55px 1fr;
   gap: 1rem;
+  width: clamp(10rem, 90vw, 25rem);
 }
 
 .playpause_wrapper {
@@ -28,7 +29,7 @@
   letter-spacing: 0.2px;
   font-size: var(--step--1);
   background-color: var(--primary-red);
-  width: max-content;
+  width: fit-content;
   color: var(--brown-90);
   font-variation-settings: 'wght' 600;
   padding: 1px 4px;
